--- a/systems/templates/docker-compose.yml.j2
+++ b/systems/templates/docker-compose.yml.j2
@@ -12,4 +12,4 @@
     - /etc/localtime:/etc/localtime:ro
   log_driver: "syslog"
   log_opt:
-    tag: "docker/{{ component }}"
+    tag: "docker/{{ component }}__{{ component }}"
